[package]
name = "yap"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
color-eyre = "0.6"
tokio = { version = "1.41", features = ["full"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
async-trait = "0.1"
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
chrono = "0.4"
